<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="optional_comment">Optional comment:</string>
    <string name="app_name">FeelsBook</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="file_name">file.sav</string>
    <string name="view_history">View history</string>
    <string name="edit">Save changes</string>
    <string name="delete_record">Delete record</string>
    <string name="view_count">View emotion count</string>
    <string name="delete_history">Delete history</string>
    <string name="emotion_count">Emotion Count:</string>
    <string name="close">Close</string>
    <string name="delete_message">Are you sure? This will delete the entire history.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="record_edited">Emotion record edited.</string>
    <string name="record_saved">" record saved."</string>
    <string name="message_too_long">Comments are 140 characters or less. The emotion record was not saved.</string>
    <string name="comment_hint">Type in a comment...</string>
    <string name="emotions">Emotions:</string>
    <string name="Anger">Record anger</string>
    <string name="Fear">Record fear</string>
    <string name="Joy">Record joy</string>
    <string name="Love">Record love</string>
    <string name="Sadness">Record sadness</string>
    <string name="Surprise">Record surprise</string>
    <string name="no_emotion_selected">Please select an emotion.</string>
    <string name="record_history">Emotion record history:</string>
    <string name="comment">Comment:</string>
    <string name="edit_time">Edit time</string>
    <string name="edit_date">Edit date</string>

</resources>